--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "eslint": "^9.31.0",
     "eslint-plugin-vue": "~10.3.0",
     "jiti": "^2.4.2",
+    "less": "^4.4.1",
+    "less-loader": "^12.3.0",
     "npm-run-all2": "^8.0.4",
     "prettier": "3.6.2",
     "typescript": "~5.8.0",
